# LorenzCycleToolkit

./: .buildinfo  .flake8  .gitignore  3D_analysis.py  BoundaryTerms.py  BoxData.py  BoxData_v2.py  BoxData_v3.py  CHANGELOG.md  ConversionTerms.py  DebugLPS.py  EnergyContents.py  GenerationDissipationTerms.py  LorenzCycleToolkit.py  LorenzPhaseSpace.py  MANIFEST.in  MetData.py  README.md  aux.py  boundary_terms.py  box_limits  calc.py  cdsapi_example.html  compute_terms.py  configuration.html  contributing.html  conversion_terms.py  derivatives.py  draw_cycle.py  energy_contents.py  environment.yml  examples_and_tutorials.html  file_naming_convention.html  fvars  generation_dissipation.py  genindex.html  index.html  installation.html  integrals.py  license.html  (+32 more)
.circleci/: config.yml
FVars/: MPAS.csv  NCEP_R1.csv  NCEP_R2.csv  NCEP_R2_RDA.csv
_sources/: cdsapi_example.rst.txt  configuration.rst.txt  contributing.rst.txt  examples_and_tutorials.rst.txt  index.rst.txt  installation.rst.txt  references.rst.txt  results.rst.txt  support.rst.txt  usage.rst.txt
docs/: README.rst
inputs/: .gitignore  Akara-subset_ERA5_choose_track.csv  Catarina-PhysicsTest_ext_ERA5.grib_choose_track  Catarina-PhysicsTest_ext_ERA5.grib_track_track  box_limits  box_limits-testcase  box_limits_Catarina  box_limits_Iba  box_limits_Reg1  box_limits_Reg2  box_limits_Yakecan  first_guess-Yakecan  fvars  fvars_ERA5  fvars_ERA5-cdsapi  fvars_MPAS-A  fvars_NCEP-R1  fvars_NCEP-R2  namelist  namelist_ERA5  namelist_ERA5-cdsapi  namelist_ERA5-copernicus  periods  periods_Catarina  sample_results.csv  (+7 more)
(+160 files in other folders)
