[build-system]
requires = ["setuptools>=69.0.0,<70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LorenzCycleToolkit"
version = "1.1.3"
description = "A toolkit for calculating the Lorenz Energy Cycle in atmospheric systems"
readme = "README.md"
authors = [
    {name = "Danilo Couto de Souza", email = "danilo.oceano@gmail.com"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "cartopy>=0.21.0",
    "cdsapi>=0.5.1",
    "matplotlib>=3.5.0",
    "metpy>=1.3.0",
    "netCDF4>=1.5.8",
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "pint>=0.19",
    "scipy>=1.8.0",
    "xarray>=2022.3.0",
]

[project.urls]
Documentation = "https://lorenzcycletoolkit.readthedocs.io/"
Source = "https://github.com/daniloceano/LorenzCycleToolkit"
Tracker = "https://github.com/daniloceano/LorenzCycleToolkit/issues"

[project.scripts]
lorenzcycletoolkit = "lorenzcycletoolkit:main"

[tool.setuptools]
packages = ["src", "src.analysis", "src.frameworks", "src.plots", "src.utils", "tests"]
py-modules = ["lorenzcycletoolkit"]
